--- a/foodistan/src/components/Header/Header.css
+++ b/foodistan/src/components/Header/Header.css
@@ -13,3 +13,18 @@
 {
     margin-top: -6px;
 }
+
+.signin-button
+{
+    position: absolute;
+    top: 35px;
+    right: 64px;
+    width: 114px;
+    height: 46px;
+    font-size: 16px;
+    padding: 12px 16px;
+    background-color: crimson;
+    color: white;
+    border-radius: 11px;
+    cursor: pointer;
+}
